--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RSClone</title>
   </head>
-  <body></body>
+  <body style="text-align: center">
+    <div id="root"></div>
+  </body>
 </html>
